tests/resources/valid/function/call_mut_function.mamba
class MyClass
    def a: Int := 20
    def f(self, x: Int) -> Int =>
        self.a := x
        def y := x + 230
        self.a + y


def my_class := MyClass()
my_class.f(10)
